2005-06-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/backend-library.scm (postscript->pdf):
	* scm/ps-to-png.scm (make-ps-images): Do not use gs -q switch in
	verbose mode.  Search for several names of gs executable.

2005-06-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/ly-module.cc (ly_make_anonymous_module): call make-module
	directly. This fixes a massive memory leak, provided you use CVS
	GUILE.

2005-06-10  Erik Sandberg  <ersa9195@student.uu.se>

	* ly/property-init.ly: Added tieDashed.

        * THANKS: Added some bughunters for 2.5.

2005-06-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/program-option.cc: add debug-gc option.

	* lily/include/lily-guile-macros.hh: don't protect exported module
	objects.

	* lily/include/lily-parser.hh (class Lily_parser): remove beam_check().

	* scm/backend-library.scm (postscript->pdf): use
	delete-intermediate-files iso. running-from-gui? 

	* ttftool/util.c (surely_read): robustness. Allow read() to return
	less bytes than requested, as per posix standards.

	* lily/pfb.cc (LY_DEFINE): set ttf_verbosity from ttf-verbosity
	program option.

	* ttftool/include/ttftool.h ("C"): rename verbosity to
	ttf_verbosity. Add to public interface.

	* scm/music-functions.scm (unfold-repeats): remove debugging display.

	* lily/program-option.cc: rename from scm-option.cc

	* lily/scm-option.cc (LY_DEFINE): handle no-foobar option setting.
	(get_help_string): Print pretty help string.

	* scripts/lilypond-book.py (PREAMBLE_LY): add no-point-and-click
	to snippet preamble.

	* lily/scm-option.cc: remove command-line-settings option. Fold
	all command-line options plus default settings in a generic
	interface. 

	* flower/getopt-long.cc (table_string): indent 2nd lines of help
	texts too.

2005-06-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/file-name.cc: Bugfix: only append DIRSEP if BASE_
	or EXT_ components non-empty.

2005-06-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/lily.scm (running-from-gui?): Export.