@@ -54,7 +54,8 @@ static Lilypond_option_init options[] = {
   {"gs-font-load", "#f",
    "load fonts via Ghostscript."},
   {"delete-intermediate-files", "#f",
-   "delete unusable PostScript files"},   
+   "delete unusable PostScript files"},
+  {"verbose", "#f", "value for the --verbose flag"},
   {"ttf-verbosity", "0",
    "how much verbosity for TTF font embedding?"},
   {"debug-gc", "#f",
