@@ -1,3 +1,8 @@
+2005-06-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/main.cc (main_with_guile): copy be_verbose_global into
+	ly_set_option()
+
 2005-06-10  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scm/backend-library.scm (postscript->pdf):
